# moonburn-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
shader/deferred/: geometry.frag  geometry.vert
shader/forward/: forward.frag  forward.static.vert  forward.vert
src/engine/: CMakeLists.txt
src/engine/basics/: CMakeLists.txt
src/engine/basics/include/engine/: exception.hpp  memory.hpp
src/engine/basics/src/: memory.cpp
src/engine/filesystem/: CMakeLists.txt
src/engine/filesystem/include/engine/: filesystem.hpp
src/engine/filesystem/src/: filesystem.cpp
src/engine/filesystem/test/filesystem.base/: CMakeLists.txt  main.cpp
src/engine/gltf/: CMakeLists.txt
src/engine/gltf/include/engine/: gltf.hpp
src/engine/gltf/src/: gltf.cpp
src/engine/gltf/test/gltf.base/: CMakeLists.txt  main.cpp  test2.blend  test2.glb
src/engine/gltf/test/gltf.json/: CMakeLists.txt  main.cpp  test.blend
src/engine/gpu/: CMakeLists.txt
src/engine/gpu/include/engine/: gpu.hpp
src/engine/gpu/include/engine/gpu/: types.hpp
src/engine/gpu/src/: gpu.cpp
src/engine/gpu/test/: CMakeLists.txt  animation.blend  animation.glb  base.cpp  cube.blend  cube.glb
src/engine/image/: CMakeLists.txt
src/engine/image/include/engine/: image.hpp
src/engine/image/src/: image.cpp
src/engine/image/test/image.load.filesystem/: CMakeLists.txt  main.cpp
src/engine/image/test/image.load.png/: CMakeLists.txt  main.cpp
src/engine/include/engine/: memory.hpp
src/engine/include/engine/image/: image.hpp
src/engine/include/engine/json/: json.hpp
src/engine/json/: CMakeLists.txt
src/engine/json/include/engine/: json.hpp
src/engine/json/src/: json.cpp
src/engine/json/test/json.base/: CMakeLists.txt  main.cpp  test1.json  test2.json
src/engine/platform/: CMakeLists.txt
src/engine/platform/include/engine/: platform.hpp
src/engine/platform/src/: platform.cpp  sdl.cpp
src/engine/platform/test/platform.base/: CMakeLists.txt  main.cpp
src/engine/skel/: CMakeLists.txt
src/engine/skel/include/engine/: skel.hpp
src/engine/skel/src/: skel.cpp
src/engine/skel/test/skel.base/: CMakeLists.txt  main.cpp  test.blend  test.glb
src/engine/src/: image.cpp  json.cpp  json.hpp
src/engine/test/image.load.png/: CMakeLists.txt  main.cpp
src/engine/test/json.base/: CMakeLists.txt  main.cpp
src/engine/vec/: CMakeLists.txt
src/engine/vec/include/engine/: vec.hpp
src/engine/vec/src/: vec.cpp
src/engine/vec/test/fmat4/: CMakeLists.txt  gen-mat4-by-mat4-multiply-outputs.py  gen-mat4-by-vec4-multiply-outputs.py  main.cpp  test-values.hpp
src/engine/view3d/: CMakeLists.txt
src/engine/view3d/include/engine/: view3.hpp
src/engine/view3d/src/: view3.cpp
src/engine/view3d/test/: CMakeLists.txt  base.cpp
src/game/: CMakeLists.txt  embedsrc.sh
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
